feat: update java version to 11